@@ -52,10 +52,7 @@ func New(ctx context.Context, params ...Parameter) (*Service, error) {
 	}
 
 	// Set logging.
-	log = zerologger.With().Str("service", "blocks").Str("impl", "standard").Logger()
-	if parameters.logLevel != log.GetLevel() {
-		log = log.Level(parameters.logLevel)
-	}
+	log = zerologger.With().Str("service", "blocks").Str("impl", "standard").Logger().Level(parameters.logLevel)
 
 	blocksSetter, isBlocksSetter := parameters.chainDB.(chaindb.BlocksSetter)
 	if !isBlocksSetter {
